--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,14 @@
         />
     </head>
     <body>
-        <div class="container"></div>
+        <div class="container">
+            <header class="header">
+                <img
+                    src="./images/logo/ohmyfood@2x.svg"
+                    alt="ohmyfood - logo"
+                    class="header__logo"
+                />
+            </header>
+        </div>
     </body>
 </html>
