--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,21 @@
                     class="header__logo"
                 />
             </header>
+
+            <main>
+                <div class="localization">
+                    <p class="localization__position">
+                        <i class="fa-solid fa-location-dot"></i>Paris,
+                        Belleville
+                    </p>
+                </div>
+            </main>
         </div>
+
+        <!-- font awesome -->
+        <script
+            src="https://kit.fontawesome.com/994e9d2d58.js"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
