Mise en place du bloc de reservation / explorer restaurants

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,17 @@
                         Belleville
                     </p>
                 </div>
+
+                <section class="explore-restaurants">
+                    <h1>Réservez le menu qui vous convient</h1>
+                    <p>
+                        Découvrez des restaurants d'exception, séléctionnés par
+                        nos soins.
+                    </p>
+                    <a href="#restaurants" class="btn btn--classic"
+                        >Explorer nos restaurants</a
+                    >
+                </section>
             </main>
         </div>
 
