--- a/public/index.html
+++ b/public/index.html
@@ -13,46 +13,50 @@
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
-            rel="stylesheet"
-        />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
             <header class="header">
-                <img
-                    src="./images/logo/ohmyfood@2x.svg"
-                    alt="ohmyfood - logo"
-                    class="header__logo"
-                />
+                <img src="./images/logo/ohmyfood@2x.svg" alt="ohmyfood - logo" class="header__logo" />
             </header>
 
             <main>
                 <div class="localization">
-                    <p class="localization__position">
-                        <i class="fa-solid fa-location-dot"></i>Paris,
-                        Belleville
-                    </p>
+                    <p class="localization__position"><i class="fa-solid fa-location-dot"></i>Paris, Belleville</p>
                 </div>
 
                 <section class="explore-restaurants">
                     <h1>Réservez le menu qui vous convient</h1>
-                    <p>
-                        Découvrez des restaurants d'exception, séléctionnés par
-                        nos soins.
-                    </p>
-                    <a href="#restaurants" class="btn btn--classic"
-                        >Explorer nos restaurants</a
-                    >
+                    <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                    <a href="#restaurants" class="btn btn--classic">Explorer nos restaurants</a>
+                </section>
+
+                <section class="process">
+                    <h2>Fonctionnement</h2>
+
+                    <ul class="process__steps">
+                        <li class="card-informations card--gray">
+                            <span class="card__chip card__chip--purple">1</span>
+                            <i class="card-informations__icon fa-solid fa-mobile-screen-button"></i>
+                            <span class="card-informations__text">Choisissez un restaurant</span>
+                        </li>
+                        <li class="card-informations card--gray">
+                            <span class="card__chip card__chip--purple">2</span>
+                            <i class="card-informations__icon fa-solid fa-list-ul"></i>
+                            <span class="card-informations__text">Composez votre menu</span>
+                        </li>
+                        <li class="card card-informations card--pink">
+                            <span class="card__chip card__chip--purple">3</span>
+                            <i class="card-informations__icon card-informations__icon--purple fa-solid fa-store"></i>
+                            <span class="card-informations__text">Dégustez au restaurant</span>
+                        </li>
+                    </ul>
                 </section>
             </main>
         </div>
 
         <!-- font awesome -->
-        <script
-            src="https://kit.fontawesome.com/994e9d2d58.js"
-            crossorigin="anonymous"
-        ></script>
+        <script src="https://kit.fontawesome.com/994e9d2d58.js" crossorigin="anonymous"></script>
     </body>
 </html>
