--- a/public/index.html
+++ b/public/index.html
@@ -46,12 +46,59 @@
                             <i class="card-informations__icon fa-solid fa-list-ul"></i>
                             <span class="card-informations__text">Composez votre menu</span>
                         </li>
-                        <li class="card card-informations card--pink">
+                        <li class="card-informations card--pink">
                             <span class="card__chip card__chip--purple">3</span>
                             <i class="card-informations__icon card-informations__icon--purple fa-solid fa-store"></i>
                             <span class="card-informations__text">Dégustez au restaurant</span>
                         </li>
                     </ul>
+                </section>
+
+                <section id="restaurants" class="restaurants">
+                    <h2>Restaurant</h2>
+
+                    <a href="./restaurant-la-palette-du-gout" class="card">
+                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Un plat de chez La palette du goût" class="card__image" />
+                        <span class="badge badge--green badge--top-right">Nouveau</span>
+                        <div class="card__details">
+                            <div class="card__descriptions">
+                                <h4 class="card__heading">La palette du goût</h4>
+                                <p class="card__information">Ménilmontant</p>
+                            </div>
+                            <i class="heart fa-solid fa-heart"></i>
+                        </div>
+                    </a>
+                    <a href="./restaurant-la-note-enchantee" class="card">
+                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Un plat de chez La note enchantée" class="card__image" />
+                        <span class="badge badge--green badge--top-right">Nouveau</span>
+                        <div class="card__details">
+                            <div class="card__descriptions">
+                                <h4 class="card__heading">La note enchantée</h4>
+                                <p class="card__information">Charonne</p>
+                            </div>
+                            <i class="heart fa-solid fa-heart"></i>
+                        </div>
+                    </a>
+                    <a href="./restaurant-a-la-francaise" class="card">
+                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Un plat de chez À la française" class="card__image" />
+                        <div class="card__details">
+                            <div class="card__descriptions">
+                                <h4 class="card__heading">À la française</h4>
+                                <p class="card__information">Cité Rouge</p>
+                            </div>
+                            <i class="heart fa-solid fa-heart"></i>
+                        </div>
+                    </a>
+                    <a href="./restaurant-le-delice-des-sens" class="card">
+                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Un plat de chez Le délice des sens" class="card__image" />
+                        <div class="card__details">
+                            <div class="card__descriptions">
+                                <h4 class="card__heading">Le délice des sens</h4>
+                                <p class="card__information">Folie-Méricourt</p>
+                            </div>
+                            <i class="heart fa-solid fa-heart"></i>
+                        </div>
+                    </a>
                 </section>
             </main>
         </div>
