Mise en place du footer
Creation du fichier ' abstracts/_placeholders ' contenant la typographie utilisee dans le logo

--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,22 @@
                     </a>
                 </section>
             </main>
+
+            <footer class="footer">
+                <h3 class="footer__heading">ohmyfood</h3>
+                <nav class="footer__navigation">
+                    <ul>
+                        <li>
+                            <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
+                        </li>
+                        <li><a href="#">Mentions légales</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </footer>
         </div>
 
         <!-- font awesome -->
