--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
                 <section id="restaurants" class="restaurants">
                     <h2>Restaurant</h2>
 
-                    <a href="./restaurant-la-palette-du-gout" class="card">
+                    <a href="./restaurant-la-palette-du-gout.html" class="card">
                         <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Un plat de chez La palette du goût" class="card__image" />
                         <span class="badge badge--green badge--top-right">Nouveau</span>
                         <div class="card__details">
@@ -68,7 +68,7 @@
                             <i class="heart fa-solid fa-heart"></i>
                         </div>
                     </a>
-                    <a href="./restaurant-la-note-enchantee" class="card">
+                    <a href="./restaurant-la-note-enchantee.html" class="card">
                         <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Un plat de chez La note enchantée" class="card__image" />
                         <span class="badge badge--green badge--top-right">Nouveau</span>
                         <div class="card__details">
@@ -79,7 +79,7 @@
                             <i class="heart fa-solid fa-heart"></i>
                         </div>
                     </a>
-                    <a href="./restaurant-a-la-francaise" class="card">
+                    <a href="./restaurant-a-la-francaise.html" class="card">
                         <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Un plat de chez À la française" class="card__image" />
                         <div class="card__details">
                             <div class="card__descriptions">
@@ -89,7 +89,7 @@
                             <i class="heart fa-solid fa-heart"></i>
                         </div>
                     </a>
-                    <a href="./restaurant-le-delice-des-sens" class="card">
+                    <a href="./restaurant-le-delice-des-sens.html" class="card">
                         <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Un plat de chez Le délice des sens" class="card__image" />
                         <div class="card__details">
                             <div class="card__descriptions">
@@ -113,7 +113,7 @@
                             <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
                         </li>
                         <li><a href="#">Mentions légales</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
                     </ul>
                 </nav>
             </footer>
