fix code, positionnement, balise, fichier normalize, taille image
Changement de balise sur la page des menu ( form est remplace par div ), decalage du titre sur la page des menu, repositionnement du footer sur les pages des menus, fichier normalize remplace par un plus recent causant moins de warning sur le validator css, taille d'image plus grande selon la dimension de la fenetre

--- a/public/restaurant-a-la-francaise.html
+++ b/public/restaurant-a-la-francaise.html
@@ -24,7 +24,7 @@
         <main>
             <div class="restaurant">
                 <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="restaurant__image" />
-                <form class="container restaurant__menu">
+                <div class="container restaurant__menu">
                     <h2>À la française<i class="heart fa-solid fa-heart"></i></h2>
 
                     <section class="restaurant__menu__list">
@@ -157,7 +157,7 @@
                     </section>
 
                     <button type="submit" class="btn btn--classic btn--p50 btn--center">Commander</button>
-                </form>
+                </div>
             </div>
         </main>
 
