--- a/public/restaurant-la-note-enchantee.html
+++ b/public/restaurant-la-note-enchantee.html
@@ -24,7 +24,7 @@
         <main>
             <div class="restaurant">
                 <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="restaurant__image" />
-                <form class="container restaurant__menu">
+                <div class="container restaurant__menu">
                     <h2>La note enchantée<i class="heart fa-solid fa-heart"></i></h2>
 
                     <section class="restaurant__menu__list">
@@ -170,24 +170,26 @@
                     </section>
 
                     <button type="submit" class="btn btn--classic btn--p50 btn--center">Commander</button>
-                </form>
+                </div>
             </div>
         </main>
 
         <footer class="footer">
-            <h3 class="footer__heading">ohmyfood</h3>
-            <nav class="footer__navigation">
-                <ul>
-                    <li>
-                        <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
-                    </li>
-                    <li><a href="#">Mentions légales</a></li>
-                    <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-                </ul>
-            </nav>
+            <div class="container">
+                <h3 class="footer__heading">ohmyfood</h3>
+                <nav class="footer__navigation">
+                    <ul>
+                        <li>
+                            <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
+                        </li>
+                        <li><a href="#">Mentions légales</a></li>
+                        <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </footer>
 
         <!-- font awesome -->
