--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,22 @@
                                 <h4 class="card__heading">La palette du goût</h4>
                                 <p class="card__information">Ménilmontant</p>
                             </div>
-                            <i class="heart fa-solid fa-heart"></i>
+
+                            <!-- SVG HEART -->
+                            <svg viewBox="0 0 512 512" class="heart">
+                                <linearGradient x1="0" y1="0" x2="0" y2="100%" id="heart1">
+                                    <stop class="heart--color-primary" offset="0" />
+                                    <stop class="heart--color-secondary" offset="100%" />
+                                </linearGradient>
+                                <path
+                                    fill="url(#heart1)"
+                                    d="M232.479,13.406c-24.561,0-48.827,9.248-67.512,25.279c-18.688-16.032-42.955-25.279-67.517-25.279
+                                        C42.806,13.406,0,56.212,0,110.857C0,176.912,45.99,217.286,115.604,278.4c5.95,5.224,12.091,10.614,18.41,16.202
+                                        c0.043,0.039,0.087,0.077,0.131,0.115l21.018,18.156c2.816,2.433,6.311,3.649,9.806,3.649s6.99-1.217,9.807-3.65l21.014-18.156
+                                        c0.044-0.038,0.087-0.076,0.131-0.114c41.606-36.797,72.802-64.967,95.37-92.44c26.36-32.088,38.638-61.101,38.638-91.305
+                                        C329.928,56.212,287.123,13.406,232.479,13.406z"
+                                />
+                            </svg>
                         </div>
                     </a>
                     <a href="./restaurant-la-note-enchantee.html" class="card">
@@ -78,7 +93,22 @@
                                 <h4 class="card__heading">La note enchantée</h4>
                                 <p class="card__information">Charonne</p>
                             </div>
-                            <i class="heart fa-solid fa-heart"></i>
+
+                            <!-- SVG HEART -->
+                            <svg viewBox="0 0 512 512" class="heart">
+                                <linearGradient x1="0" y1="0" x2="0" y2="100%" id="heart2">
+                                    <stop class="heart--color-primary" offset="0" />
+                                    <stop class="heart--color-secondary" offset="100%" />
+                                </linearGradient>
+                                <path
+                                    fill="url(#heart2)"
+                                    d="M232.479,13.406c-24.561,0-48.827,9.248-67.512,25.279c-18.688-16.032-42.955-25.279-67.517-25.279
+                                        C42.806,13.406,0,56.212,0,110.857C0,176.912,45.99,217.286,115.604,278.4c5.95,5.224,12.091,10.614,18.41,16.202
+                                        c0.043,0.039,0.087,0.077,0.131,0.115l21.018,18.156c2.816,2.433,6.311,3.649,9.806,3.649s6.99-1.217,9.807-3.65l21.014-18.156
+                                        c0.044-0.038,0.087-0.076,0.131-0.114c41.606-36.797,72.802-64.967,95.37-92.44c26.36-32.088,38.638-61.101,38.638-91.305
+                                        C329.928,56.212,287.123,13.406,232.479,13.406z"
+                                />
+                            </svg>
                         </div>
                     </a>
                     <a href="./restaurant-a-la-francaise.html" class="card">
@@ -88,7 +118,22 @@
                                 <h4 class="card__heading">À la française</h4>
                                 <p class="card__information">Cité Rouge</p>
                             </div>
-                            <i class="heart fa-solid fa-heart"></i>
+
+                            <!-- SVG HEART -->
+                            <svg viewBox="0 0 512 512" class="heart">
+                                <linearGradient x1="0" y1="0" x2="0" y2="100%" id="heart3">
+                                    <stop class="heart--color-primary" offset="0" />
+                                    <stop class="heart--color-secondary" offset="100%" />
+                                </linearGradient>
+                                <path
+                                    fill="url(#heart3)"
+                                    d="M232.479,13.406c-24.561,0-48.827,9.248-67.512,25.279c-18.688-16.032-42.955-25.279-67.517-25.279
+                                        C42.806,13.406,0,56.212,0,110.857C0,176.912,45.99,217.286,115.604,278.4c5.95,5.224,12.091,10.614,18.41,16.202
+                                        c0.043,0.039,0.087,0.077,0.131,0.115l21.018,18.156c2.816,2.433,6.311,3.649,9.806,3.649s6.99-1.217,9.807-3.65l21.014-18.156
+                                        c0.044-0.038,0.087-0.076,0.131-0.114c41.606-36.797,72.802-64.967,95.37-92.44c26.36-32.088,38.638-61.101,38.638-91.305
+                                        C329.928,56.212,287.123,13.406,232.479,13.406z"
+                                />
+                            </svg>
                         </div>
                     </a>
                     <a href="./restaurant-le-delice-des-sens.html" class="card">
@@ -98,7 +143,22 @@
                                 <h4 class="card__heading">Le délice des sens</h4>
                                 <p class="card__information">Folie-Méricourt</p>
                             </div>
-                            <i class="heart fa-solid fa-heart"></i>
+
+                            <!-- SVG HEART -->
+                            <svg viewBox="0 0 512 512" class="heart">
+                                <linearGradient x1="0" y1="0" x2="0" y2="100%" id="heart4">
+                                    <stop class="heart--color-primary" offset="0" />
+                                    <stop class="heart--color-secondary" offset="100%" />
+                                </linearGradient>
+                                <path
+                                    fill="url(#heart4)"
+                                    d="M232.479,13.406c-24.561,0-48.827,9.248-67.512,25.279c-18.688-16.032-42.955-25.279-67.517-25.279
+                                        C42.806,13.406,0,56.212,0,110.857C0,176.912,45.99,217.286,115.604,278.4c5.95,5.224,12.091,10.614,18.41,16.202
+                                        c0.043,0.039,0.087,0.077,0.131,0.115l21.018,18.156c2.816,2.433,6.311,3.649,9.806,3.649s6.99-1.217,9.807-3.65l21.014-18.156
+                                        c0.044-0.038,0.087-0.076,0.131-0.114c41.606-36.797,72.802-64.967,95.37-92.44c26.36-32.088,38.638-61.101,38.638-91.305
+                                        C329.928,56.212,287.123,13.406,232.479,13.406z"
+                                />
+                            </svg>
                         </div>
                     </a>
                 </div>
