--- a/public/restaurant-la-note-enchantee.html
+++ b/public/restaurant-la-note-enchantee.html
@@ -25,7 +25,24 @@
             <div class="restaurant">
                 <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="restaurant__image" />
                 <div class="container restaurant__menu">
-                    <h2>La note enchantée<i class="heart fa-solid fa-heart"></i></h2>
+                    <h2>
+                        La note enchantée
+                        <!-- SVG HEART -->
+                        <svg viewBox="0 0 512 512" class="heart">
+                            <linearGradient x1="0" y1="0" x2="0" y2="100%" id="heart1">
+                                <stop class="heart--color-primary" offset="0" />
+                                <stop class="heart--color-secondary" offset="100%" />
+                            </linearGradient>
+                            <path
+                                fill="url(#heart1)"
+                                d="M232.479,13.406c-24.561,0-48.827,9.248-67.512,25.279c-18.688-16.032-42.955-25.279-67.517-25.279
+                                    C42.806,13.406,0,56.212,0,110.857C0,176.912,45.99,217.286,115.604,278.4c5.95,5.224,12.091,10.614,18.41,16.202
+                                    c0.043,0.039,0.087,0.077,0.131,0.115l21.018,18.156c2.816,2.433,6.311,3.649,9.806,3.649s6.99-1.217,9.807-3.65l21.014-18.156
+                                    c0.044-0.038,0.087-0.076,0.131-0.114c41.606-36.797,72.802-64.967,95.37-92.44c26.36-32.088,38.638-61.101,38.638-91.305
+                                    C329.928,56.212,287.123,13.406,232.479,13.406z"
+                            />
+                        </svg>
+                    </h2>
 
                     <section class="restaurant__menu__list">
                         <h3>ENTRÉES</h3>
