--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet" />
     </head>
     <body>
+        <div class="spinner">
+            <div class="spinner__circle1">
+                <div class="spinner__circle2">
+                    <div class="spinner__circle3"></div>
+                </div>
+            </div>
+        </div>
+
         <header class="header">
             <img src="./images/logo/ohmyfood@2x.svg" alt="ohmyfood - logo" class="header__logo" />
         </header>
