fix contenu du svg coeur
ajout padding right du composant card__details

--- a/public/restaurant-le-delice-des-sens.html
+++ b/public/restaurant-le-delice-des-sens.html
@@ -28,7 +28,7 @@
                     <h2>
                         Le délice des sens
                         <!-- SVG HEART -->
-                        <svg viewBox="0 0 512 512" class="heart">
+                        <svg viewBox="0 0 325 325" width="25" height="25" class="heart">
                             <linearGradient x1="0" y1="0" x2="0" y2="100%" id="heart1">
                                 <stop class="heart--color-primary" offset="0" />
                                 <stop class="heart--color-secondary" offset="100%" />
