--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
                             </div>
 
                             <!-- SVG HEART -->
-                            <svg viewBox="0 0 512 512" class="heart">
+                            <svg viewBox="0 0 325 325" width="25" height="25" class="heart">
                                 <linearGradient x1="0" y1="0" x2="0" y2="100%" id="heart1">
                                     <stop class="heart--color-primary" offset="0" />
                                     <stop class="heart--color-secondary" offset="100%" />
@@ -103,7 +103,7 @@
                             </div>
 
                             <!-- SVG HEART -->
-                            <svg viewBox="0 0 512 512" class="heart">
+                            <svg viewBox="0 0 325 325" width="25" height="25" class="heart">
                                 <linearGradient x1="0" y1="0" x2="0" y2="100%" id="heart2">
                                     <stop class="heart--color-primary" offset="0" />
                                     <stop class="heart--color-secondary" offset="100%" />
@@ -128,7 +128,7 @@
                             </div>
 
                             <!-- SVG HEART -->
-                            <svg viewBox="0 0 512 512" class="heart">
+                            <svg viewBox="0 0 325 325" width="25" height="25" class="heart">
                                 <linearGradient x1="0" y1="0" x2="0" y2="100%" id="heart3">
                                     <stop class="heart--color-primary" offset="0" />
                                     <stop class="heart--color-secondary" offset="100%" />
@@ -153,7 +153,7 @@
                             </div>
 
                             <!-- SVG HEART -->
-                            <svg viewBox="0 0 512 512" class="heart">
+                            <svg viewBox="0 0 325 325" width="25" height="25" class="heart">
                                 <linearGradient x1="0" y1="0" x2="0" y2="100%" id="heart4">
                                     <stop class="heart--color-primary" offset="0" />
                                     <stop class="heart--color-secondary" offset="100%" />
